# Spectraflow

./: README.md  codemagic.yaml
app/: pubspec.yaml
app/android/: build.gradle.kts
app/android/app/: CMakeLists.txt  build.gradle.kts
app/android/app/jni/: SpectraflowJNI.cpp
app/android/app/src/main/: AndroidManifest.xml
app/android/app/src/main/kotlin/com/spectraflow/app/: MainActivity.kt  SpectraflowEngine.kt
app/ios/Runner.xcodeproj/: project.pbxproj
app/lib/: main.dart
app/lib/core/: audio_data_provider.dart  audio_manager.dart  dna_generator.dart  feedback_state.dart  fps_counter.dart  native_bridge.dart  palette_data.dart  palette_manager.dart  seed_manager.dart  shader_manager.dart  texture_manager.dart
app/lib/shaders/: blinding_lights.frag  chessboard.frag  fractal.frag  kaleidoscope.frag  particles.frag  plasma.frag  smoke.frag  test_shader.frag  tunnel.frag  tunnel_composite.frag
app/lib/ui/screens/: visualizer_screen.dart
app/lib/ui/theme/: sf_theme.dart
app/lib/ui/widgets/: fft_display.dart  glass_container.dart  shader_canvas.dart  visualizer_widget.dart
app/linux/: CMakeLists.txt
app/macos/Runner.xcodeproj/: project.pbxproj
app/macos/Runner/Configs/: AppInfo.xcconfig
app/windows/runner/: Runner.rc
core/: CMakeLists.txt  Types.h  spectraflow_ffi.cpp  spectraflow_ffi.h
core/ai/: AIBrain.cpp  AIBrain.h
core/audio/: AudioEngine.cpp  AudioEngine.h  BPMDetector.cpp  BPMDetector.h  FFTAnalyzer.cpp  FFTAnalyzer.h  FilePlayer.cpp  FilePlayer.h  SignalNormalizer.cpp  SignalNormalizer.h
core/render/: DNASystem.cpp  DNASystem.h  FeedbackRenderer.cpp  FeedbackRenderer.h  RingBuffer.h
